<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">公共基础库</string>
    <string name="change_theme">修改主题啦</string>
    <string name="sec_act">RecyclerView页面</string>
    <string name="action_settings">Settings</string>
    <string name="log_in">Login</string>
    <string name="create_user">创建用户</string>
    <string name="no_permissions">应用需要必要的运行权限</string>
    <string name="settings">设置</string>
    <string name="help">Help</string>
    <string name="string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
    <string name="quit">返回</string>
    <string name="permission_camera_user_hint">test onRequestPermissionsResult: 没有此权限，无法开启这个功能，请开启权限。请打开照相机权限</string>
    <string name="permission_camera_user_hint1">test shouldShowRequestPermissionRationale:
        没有此权限，无法开启这个功能，请开启权限。请打开照相机权限
    </string>
    <string name="permission_get_accounts_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_GET_ACCOUNTS</string>
    <string name="permission_read_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_PHONE_STATE</string>
    <string name="permission_call_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CALL_PHONE</string>
    <string name="permission_camera_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CAMERA</string>
    <string name="permission_access_fine_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_FINE_LOCATION</string>
    <string name="permission_access_coarse_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_COARSE_LOCATION
    </string>
    <string name="permission_read_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_EXTERNAL_STORAGE</string>
    <string name="permission_white_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_WRITE_EXTERNAL_STORAGE</string>
    <string name="permission_recode_audio_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_RECORD_AUDIO</string>
    <string name="normal_style">普通样式</string>
    <string name="zhihu_style">仿知乎样式</string>
    <string name="reload_text">reload data</string>
    <string name="custom_loading_text">加载中</string>
    <string name="custom_empty_text">暂无数据</string>
    <string name="custom_error_text">加载失败，请稍后重试</string>
    <string name="custom_nonetwork_text">似乎出了点问题...</string>
    <string name="custom_reloadBtn_text">重新加载</string>
    <string name="show_text_0">30个标签</string>
    <string name="show_text_1">多种视图</string>
    <string name="show_text_2">云同步</string>
    <string name="show_text_3">智能提醒</string>
    <string name="operation">Operation</string>
    <string name="content_text">This is content message.</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="text_iknow">I Know</string>
    <string name="ok">OK</string>
    <string name="success">Success</string>
    <string name="info">Info</string>
    <string name="error">Error</string>
    <string name="warning">Warning</string>
    <string name="text_data">Your info text goes here. Loremipsum dolor sit amet, consecteturn adipisicing elit, sed do
        eiusmod.
    </string>
    <string name="prompt_dialog">Prompt Dialog</string>
    <string name="pic">Pic</string>
    <string name="text">Text</string>
    <string name="text_and_pic">Text And Pic</string>
    <string name="title_activity_green_dao_demo">GreenDaoDemoActivity</string>
    <string name="simple_circle_button_example">Simple Circle Button Example</string>
    <string name="text_inside_circle_button_example">Text Inside Circle Button Example</string>
    <string name="text_outside_circle_button_example">Text Outside Circle Button Example</string>
    <string name="ham_button_example">Ham Button Example</string>
    <string name="square_and_piece_corner_radius_example">Square And Piece Corner Radius Example</string>
    <string name="boom_example">Boom Example</string>
    <string name="button_place_alignment_example">Button Place Alignment Example</string>
    <string name="order_example">Order Example</string>
    <string name="actionbar_example">ActionBar Example</string>
    <string name="tool_bar_example">ToolBar Example</string>
    <string name="draggable_example">Draggable Example</string>
    <string name="ease_example">Ease Example</string>
    <string name="listener_example">Listener Example</string>
    <string name="control_example">Control Example</string>
    <string name="share_example">Share Example</string>
    <string name="list_example">List Example</string>
    <string name="recycler_view_example">Recycler View Example</string>
    <string name="fragment_example">Fragment Example</string>
    <string name="change_boom_button_example">Change Boom Button Example</string>
    <string name="three_d_animation_example">3D Animation Example</string>
    <string name="custom_position_example">Custom Position Example</string>
    <string name="fade_views_example">Fade Views Example</string>
    <string name="price_strike">
        <strike>\u20b9 1400</strike>
        <font fgcolor="red">\u20b9 1200</font>
    </string>
    <string name="text_inside_circle_button_text_normal">Text Inside Circle Button(Normal)</string>
    <string name="text_inside_circle_button_text_highlighted">Text Inside Circle Button(Highlighted)</string>
    <string name="text_inside_circle_button_text_unable">Text Inside Circle Button(Unable)</string>
    <string name="text_outside_circle_button_text_normal">Text Outside Circle Button(Normal)</string>
    <string name="text_outside_circle_button_text_highlighted">Text Outside Circle Button(Highlighted)</string>
    <string name="text_outside_circle_button_text_unable">Text Outside Circle Button(Unable)</string>
    <string name="text_ham_button_text_normal">Ham Button Text(Normal)</string>
    <string name="text_ham_button_text_highlighted">Ham Button Text(Highlighted)</string>
    <string name="text_ham_button_text_unable">Ham Button Text(Unable)</string>
    <string name="text_ham_button_sub_text_normal">Ham Button Sub Text(Normal)</string>
    <string name="text_ham_button_sub_text_highlighted">Ham Button Sub Text(Highlighted)</string>
    <string name="text_ham_button_sub_text_unable">Ham Button Sub Text(Unable)</string>
    <string name="bilibili_app_name">MT: Bilibili</string>
    <string name="multi_grid_app_name">MT: MultiGrid</string>
    <string name="close">close</string>
    <string name="add">ADD</string>
    <string name="remove">REMOVE</string>
    <string name="clear">CLEAR</string>
    <string name="price">\u20b9 1400</string>
    <string name="clothing_title">Basics Blue Casuals</string>
    <string name="captcha_title">Captcha</string>
    <string name="scratch_for_offer">Scratch to get offer :</string>
    <string name="flat_200">FLAT200</string>
    <string name="flat_200_offer">Get flat \u20b9 200 off with</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="wish_list">WISHLIST IT!</string>
    <string name="select_size">Select Size:</string>
    <string name="scratch_to_find_image">Prove you are not a robot : Scratch and tell what was the image</string>
    <string name="house">House</string>
    <string name="train">Train</string>
    <string name="park">Park</string>
    <string name="tree">Tree</string>
    <string name="verify">Verify</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="scratch_text_view_demo">Scratch Text View Demo</string>
    <string name="scratch_image_view_demo">Scratch Image View Demo</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="contact_info">zhouzj5@lenovo.com</string>
    <string name="version_the_new">发现新版本:</string>
    <string name="text_hint">提示</string>
    <string name="info_string">"1. 点击创建按钮开始创建标签组\n2. 按住标签组滑动，调整位置\n3.点击单个标签，调整该标签的方向\n4. 点击中心圆弹出dialog\n5. 长按标签组删除"
    </string>
    <string name="loading">正在加载...</string>
    <string name="load_more">点击加载更多</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. Have you given the camera
        permission to the APP? Or you may need to restart the device.
    </string>
    <string name="ss">搜索</string>
    <string name="sys">扫一扫</string>
    <string name="shous">手输</string>
    <string name="spanUtils_side_icon_title">在文字左边或者右边直接添加 Icon</string>
    <string name="spanUtils_align_middle_title">支持垂直居中的 ImageSpan</string>
    <string name="spanUtils_margin_image_title">支持增加左右间距的 ImageSpan</string>
    <string name="spanUtils_block_space_title">整行的空白 Span，可用来用于制作段间距</string>
    <string name="spanUtils_custom_type_face_title">自定义部分文字的字体</string>
    <string name="spanUtils_rmb">¥</string>
    <string name="linkTextView_auto_identify">URL/Mail/Tel自动识别</string>
    <string name="linkTextView_auto_identify_word">可以自动识别网页链接，例如 http://www.qmuiteam.com。\n可以自动识别电话号码，例如 13600000000。\n也可以识别邮件地址，例如 qmuiteam@gmail.com。\n我们可以为其添加自定义的点击事件。</string>
    <string name="system_behavior_1">\@qmui:点击span区域会同时出发span的点击事件和 TextView 的点击事件 #qmui#</string>
    <string name="system_behavior_2">\@qmui: 系统默认情况下，TextView 不添加点击事件，然后 TextView 的父元素添加点击事件，
        那么点击 TextView 将无法触发父元素的点击事件。#qmui#</string>
    <string name="span_touch_fix_1">\@qmui:span的点击事件与textView的点击事件完全分离#qmui#</string>
    <string name="span_touch_fix_2">\@qmui:默认情况下，如果textView添加了clickSpan,#qmui#那么textView的事件将无法冒泡到父级。
        但在某些场景（例如微博评论需要整条可点），我们需要将事件冒泡给父元素进行处理。#qmui#</string>
    <string name="spanTouchFix_description">QMUISpanTouchFixTextView 主要用于修正 TextView 添加 ClickSpan 后的点击行为与事件传递</string>
    <string name="spanTouchFix_system_behavior">TextView系统行为</string>
    <string name="spanTouchFix_qmui_fix_behavior">QMUI修复后行为</string>
    <string name="switch_list">ListView</string>
    <string name="switch_button">Buttons</string>
    <string name="switch_recycler">RecyclerView</string>
</resources>