<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            >

            <Button
                android:id="@+id/square_and_piece_corner_radius_example"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/square_and_piece_corner_radius_example"
                />

            <Button
                android:id="@+id/actionbar_example"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/actionbar_example"
                />
            <Button
                android:id="@+id/ease_example"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ease_example"
                />

        </LinearLayout>

    </ScrollView>

</FrameLayout>
